[package]
name = "advent2017"
version = "0.1.0"
authors = ["Heath Kehoe <yaheath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
advent_lib = { version = "0.2.0", path = "../advent_lib_old" }
itertools = "0.10.5"
md5 = "0.7.0"
json = "0.12.4"
rand = "0.8.5"
